--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,7 @@ padding: 5px 15px;
 margin: 0px;
 }
 
-#right,#middleright,#top,#left,#oov,#lexicon{
+#right,#middleright,#top,#left,#oov,#lexicon,#wrapper{
 border: 2px solid #00CCFF;
 padding:0px;
 margin:0px;
